[tool.poetry]
name = "python-example"
version = "0.1.0"
description = ""
authors = ["zhaolin.wu <zhaolin.wu@xxx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
blinker = "1.8.2"
click = "8.1.8"
Flask = "3.0.3"
gunicorn = "23.0.0"
importlib_metadata = "8.5.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.5"
MarkupSafe = "2.1.5"
packaging = "24.2"
PyMySQL = "1.1.1"
Werkzeug = "3.0.6"
zipp = "3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
